--- a/module_3/challenges/d009/style.css
+++ b/module_3/challenges/d009/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fontOne: Verdana, Geneva, Tahoma, sans-serif;
+    --fontTwo: 'Passion One', cursive;
+    --fontThree: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -6,6 +14,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fontOne);
 }
 
 header {
@@ -17,6 +26,8 @@ header {
 header > h1 {
     padding-top: 3.125rem;
     font-variant: small-caps;
+    font-family: var(--fontTwo);
+    font-size: 10vw;
 }
 
 header > p {
@@ -38,6 +49,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 1.875rem;
+    font-family: var(--fontThree);
+    font-size: 3.5vw;
 }
 
 .normal {
@@ -52,7 +65,8 @@ section {
 
 .image > p {
     background-color: rgba(0, 0, 0, 0.258);
-    width: 25rem;
+    padding: 0.313rem;
+    display: inline-block;
 }
 
 footer {
