Add parallax effect in cordelProject

--- a/module_3/challenges/d009/style.css
+++ b/module_3/challenges/d009/style.css
@@ -53,6 +53,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -61,12 +65,25 @@ section {
 .image {
     background-color: rgb(147, 48, 48);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.421);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .image > p {
-    background-color: rgba(0, 0, 0, 0.258);
+    background-color: rgba(0, 0, 0, 0.533);
     padding: 0.313rem;
     display: inline-block;
+    text-shadow: 2px 2px 0px black;
+}
+
+#img01 {
+    background-image: url('../d009/images/background001.jpg');
+    background-position: right center;
+}
+
+#img02 {
+    background-image: url('../d009/images/background002.jpg');
 }
 
 footer {
